Create base html structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <img src="images/logo.png">
+        <header>
+            <img src="images/logo.png">
+            <img class="avatar" src="images/user-avatar.png">
+        </header>
+        
+        <section>
+            <div class="container">
+                <img class="avatar" id="avatar" src="images/avatar-vangogh.jpg">
+                <div>
+                    <h2 id="name">Vincent van Gogh</h2>
+                    <p id="location">Zundert, Netherlands</p>
+                </div>
+                <img id="post" src="images/post-vangogh.jpg">
+                <div class="icons">
+                    <img src="images/icon-heart.png">
+                    <img src="images/icon-comment.png">
+                    <img src="images/icon-dm.png">
+                </div>
+                <p><span id="likes">21</span> likes</p>
+                <p><span id="username">vincey1853</span> <span id="comment">just took a few mushrooms lol</span></p>
+            </div>
+        </section>
+            
         <script src="index.js"></script>
     </body>
 </html>
